--- a/frontend/src/app/landing/landing.html
+++ b/frontend/src/app/landing/landing.html
@@ -1,1 +1,9 @@
-<p>landing works!</p>
+<section>
+    <div class="landing">
+        <h1>Welcome to the Kanban</h1>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua</p>
+       <a routerLink="/kanban" class="button">Discover</a>
+
+    </div>
+</section>
+<router-outlet></router-outlet>
