added kanban, row component and styling

--- a/frontend/src/app/(kanban)/kanban/kanban.html
+++ b/frontend/src/app/(kanban)/kanban/kanban.html
@@ -1,7 +1,17 @@
 <section>
     <div class="container">
-    
+        <div class="add" >+</div>
 
-
+        <div class="tableau">
+            <app-row></app-row>
+            <app-row></app-row>
+            <app-row></app-row>
+            <app-row></app-row>
+            <app-row></app-row>
+            <app-row></app-row>
+            <app-row></app-row>
+            <app-row></app-row>
+            <app-row></app-row>
+        </div>
     </div>
 </section>
