--- a/frontend/src/app/(kanban)/row/row.html
+++ b/frontend/src/app/(kanban)/row/row.html
@@ -1,1 +1,6 @@
-<p>row works!</p>
+<section>
+    <div class="row">
+       <textarea class="title" placeholder="Titre.."></textarea>
+    </div>
+    <button class="new-task">Add New Task</button>
+</section>
