--- a/frontend/src/app/(kanban)/kanban/kanban.css
+++ b/frontend/src/app/(kanban)/kanban/kanban.css
@@ -2,10 +2,48 @@
     height: 100vh;
     width: 100%;
     background-color: rgb(255, 255, 255);
-    
+    display: flex;
+    flex-direction: column;
+
+}
+.add {
+    margin: 1%;
+    display: flex;
+    text-align: center;
+    justify-content: center;
+    align-items: center;
+    width: 2rem;
+    height: 2rem;
+    border-radius: 25px;
+    background-color: rgb(255, 255, 255);
+    font-size: 30px;
+    transition: 0.7s ease-in-out;
+    font-size: 20px;
+    background-color: rgb(0, 0, 0);
+    box-shadow: rgba(50, 50, 93, 0.25) 0px 13px 27px -5px, rgba(0, 0, 0, 0.3) 0px 8px 16px -8px;
+    color: rgb(255, 255, 255);
+    margin-top: 1%;
+    position: absolute;
+    z-index: 1;
+
+}
+.add:hover{
+    scale: 1.05;
+    transform: translate(0 ,5px);
+    background-color: rgb(108, 239, 117);
+    color: rgb(255, 255, 255);
+    box-shadow: rgba(50, 50, 93, 0.25) 0px 13px 27px -5px, rgba(0, 0, 0, 0.3) 0px 8px 16px -8px;
+
+  
+
+
+}
+
+
+.tableau{
+    margin-top: 11%;
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
     position: relative;
     text-align: center;
-
 }
