--- a/frontend/src/app/landing/landing.css
+++ b/frontend/src/app/landing/landing.css
@@ -19,14 +19,17 @@
     text-align: center;
     justify-content: center;
     align-items: center;
-    width: 15%;
+    width: 20%;
     height: 10%;
     border-radius: 25px;
-    background-color: rgb(40, 40, 40);
+    background-color: rgb(255, 255, 255);
     font-size: 30px;
     transition: 0.7s ease-in-out;
-    box-shadow: rgba(50, 50, 93, 0.25) 0px 13px 27px -5px, rgba(0, 0, 0, 0.3) 0px 8px 16px -8px;
     font-size: 30px;
+    
+    background-color: rgb(0, 0, 0);
+    box-shadow: rgba(50, 50, 93, 0.25) 0px 13px 27px -5px, rgba(0, 0, 0, 0.3) 0px 8px 16px -8px;
+
     color: white;
 
 
@@ -35,7 +38,11 @@
 .button:hover{
     scale: 1.05;
     transform: translate(0 ,5px);
-    background-color: black;
+    background-color: white;
+    color: rgb(0, 0, 0);
+    box-shadow: rgba(50, 50, 93, 0.25) 0px 13px 27px -5px, rgba(0, 0, 0, 0.3) 0px 8px 16px -8px;
+
+  
 
 
 }
