--- a/frontend/src/app/(kanban)/kanban/kanban.css
+++ b/frontend/src/app/(kanban)/kanban/kanban.css
@@ -1,49 +1,83 @@
-.container{
+.kanban {
     height: 100vh;
     width: 100%;
-    background-color: rgb(255, 255, 255);
+    background-color: white;
     display: flex;
     flex-direction: column;
-
-}
-.add {
-    margin: 1%;
-    display: flex;
-    text-align: center;
-    justify-content: center;
-    align-items: center;
-    width: 2rem;
-    height: 2rem;
-    border-radius: 25px;
-    background-color: rgb(255, 255, 255);
-    font-size: 30px;
-    transition: 0.7s ease-in-out;
-    font-size: 20px;
-    background-color: rgb(0, 0, 0);
-    box-shadow: rgba(50, 50, 93, 0.25) 0px 13px 27px -5px, rgba(0, 0, 0, 0.3) 0px 8px 16px -8px;
-    color: rgb(255, 255, 255);
-    margin-top: 1%;
-    position: absolute;
-    z-index: 1;
-
-}
-.add:hover{
-    scale: 1.05;
-    transform: translate(0 ,5px);
-    background-color: rgb(108, 239, 117);
-    color: rgb(255, 255, 255);
-    box-shadow: rgba(50, 50, 93, 0.25) 0px 13px 27px -5px, rgba(0, 0, 0, 0.3) 0px 8px 16px -8px;
-
-  
-
-
+    margin: 10px;
 }
 
+.kanban  button {
+    width: 10rem;
+    min-height: 40px;
+    border-radius: 8px;
+    background-color: black;
+    color: white;
+    border: none;
+    cursor: pointer;
+    padding: 0 15px;
+    margin-bottom: 20px;
+    transition: 0.3s ease-in-out;
+    
+}
 
-.tableau{
-    margin-top: 11%;
+.kanban > button:hover {
+    background-color: green;
+}
+
+.rows {
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
-    position: relative;
-    text-align: center;
+    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+    gap: 20px;
+}
+
+.row {
+    background-color: #f5f5f5;
+    border-radius: 8px;
+    padding: 20px;
+    min-height: 200px;
+    display: flex;
+    flex-direction: column;
+    max-width: 35rem;
+}
+
+.row h3 {
+    margin: 0 0 10px 0;
+    color: black;
+}
+
+.row button {
+    background-color: rgb(0, 0, 0);
+    color: white;
+    border: none;
+    border-radius: 5px;
+    padding: 8px 10px;
+    cursor: pointer;
+    margin: 10px;
+}
+
+.row button:hover {
+    background-color: darkblue;
+}
+
+.row textarea {
+    width: 100%;
+    border: 1px solid gray;
+    border-radius: 5px;
+
+    margin-bottom: 10px;
+}
+
+.row ul {
+    list-style: none;
+    padding: 0;
+    margin: 0;
+}
+
+.row li {
+    background-color: white;
+    border: 1px solid gray;
+    border-radius: 5px;
+    padding: 10px;
+    margin: 5px 0;
 }
