--- a/frontend/src/app/(kanban)/kanban/kanban.css
+++ b/frontend/src/app/(kanban)/kanban/kanban.css
@@ -7,7 +7,10 @@
     margin: 10px;
 }
 
-.kanban  button {
+.kanban  button, a {
+    display: flex;
+    align-items: center;
+    justify-content: center;
     width: 10rem;
     min-height: 40px;
     border-radius: 8px;
@@ -61,10 +64,11 @@
 }
 
 .row textarea {
+    text-align: center;
     width: 100%;
     border: 1px solid gray;
     border-radius: 5px;
-
+    font-size: 20px;
     margin-bottom: 10px;
 }
 
