--- a/frontend/src/app/(kanban)/kanban/kanban.html
+++ b/frontend/src/app/(kanban)/kanban/kanban.html
@@ -1,15 +1,14 @@
 <div class="kanban">
-  <button (click)="addRow()">+ Ajouter une colonne</button>
+    <a routerLink="/">Back to Main Page</a>
+  <button (click)="addRow()">+ Add a Column</button>
 
   <div class="rows">
     <div class="row" *ngFor="let row of rows">
       
       <!-- Titre -->
-      <textarea [(ngModel)]="row.title" rows="2" placeholder="Titre de la colonne"></textarea>
-
-      <!-- Tâches -->
-      <textarea [(ngModel)]="row.taskInput" rows="3" placeholder="Ajouter une tâche"></textarea>
-      <button (click)="addTask(row)">Ajouter</button>
+      <textarea [(ngModel)]="row.title" rows="2" placeholder="Column Title"></textarea>
+      <textarea [(ngModel)]="row.taskInput" rows="3" placeholder="Add Task"></textarea>
+      <button (click)="addTask(row)">Add</button>
 
       <ul>
         <li *ngFor="let task of row.tasks">{{ task.title }}</li>
@@ -17,3 +16,4 @@
     </div>
   </div>
 </div>
+<router-outlet></router-outlet>
