--- a/frontend/src/app/(kanban)/kanban/kanban.css
+++ b/frontend/src/app/(kanban)/kanban/kanban.css
@@ -78,10 +78,6 @@
     margin: 0;
 }
 
-.row li {
-    background-color: white;
-    border: 1px solid gray;
-    border-radius: 5px;
-    padding: 10px;
-    margin: 5px 0;
+.tasks-container {
+  margin-top: 10px;
 }
