--- a/frontend/src/app/(kanban)/kanban/kanban.html
+++ b/frontend/src/app/(kanban)/kanban/kanban.html
@@ -10,9 +10,14 @@
       <textarea [(ngModel)]="row.taskInput" rows="3" placeholder="Add Task"></textarea>
       <button (click)="addTask(row)">Add</button>
 
-      <ul>
-        <li *ngFor="let task of row.tasks">{{ task.title }}</li>
-      </ul>
+      <div class="tasks-container">
+        <app-task 
+          *ngFor="let task of row.tasks" 
+          [task]="task"
+          (deleteTask)="deleteTask(row, $event)"
+          (updateTask)="updateTask(row, $event)">
+        </app-task>
+      </div>
     </div>
   </div>
 </div>
