--- a/frontend-angular/src/app/(kanban)/kanban/kanban.html
+++ b/frontend-angular/src/app/(kanban)/kanban/kanban.html
@@ -7,6 +7,7 @@
       <textarea [(ngModel)]="row.title" (ngModelChange)="updateRow()" rows="2" placeholder="Column Title"></textarea>
       <textarea [(ngModel)]="row.taskInput" (ngModelChange)="updateRow()" rows="3" placeholder="Add Task"></textarea>
       <button (click)="addTask(row)">Add</button>
+      <button (click)="clearAll()">Reset All</button>
       <button (click)="updateRow()">Refresh</button>
 
       <div class="tasks-container">
