--- a/frontend-angular/src/app/landing/landing.html
+++ b/frontend-angular/src/app/landing/landing.html
@@ -2,8 +2,10 @@
     <div class="landing">
         <h1>Welcome to the Kanban</h1>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua</p>
-       <a routerLink="/kanban" class="button">Discover</a>
+       <a routerLink="/kanban" class="button">Discover</a> 
+       <!-- Router Link vers la page kanban remplace le href en angular -->
 
     </div>
 </section>
 <router-outlet></router-outlet>
+<!-- Router Outlet  -->
