--- a/frontend-angular/src/styles.css
+++ b/frontend-angular/src/styles.css
@@ -1,18 +1,19 @@
 /* You can add global styles to this file, and also import other style files */
 @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap');
-*{
+/* Reset CSS */
+*{ 
     margin: 0;
     padding: 0;
     font-family: 'Roboto';
 }
-
+/* reset css */
 a {
     outline: none;
     text-decoration: none;
     color: white;
 
 }
-
+/* Styling et Reset CSS */
 textarea {
     border: none;
     overflow: auto;
@@ -22,5 +23,5 @@ textarea {
     -moz-box-shadow: none;
     box-shadow: none;
 
-    resize: none; /*remove the resize handle on the bottom right*/
+    resize: none;
 }
