--- a/frontend-angular/src/app/(kanban)/kanban/kanban.css
+++ b/frontend-angular/src/app/(kanban)/kanban/kanban.css
@@ -35,7 +35,7 @@
 }
 
 .row {
-    background-color: #f5f5f5;
+    background-color: #e3e3e3;
     border-radius: 8px;
     padding: 20px;
     min-height: 200px;
@@ -54,13 +54,14 @@
     color: white;
     border: none;
     border-radius: 5px;
-    padding: 8px 10px;
+    padding: 8px 8px;
     cursor: pointer;
     margin: 10px;
+    border-radius: 25px;
 }
 
 .row button:hover {
-    background-color: darkblue;
+    background-color: rgb(91, 91, 91);
 }
 
 .row textarea {
@@ -71,6 +72,7 @@
     font-size: 20px;
     margin-bottom: 10px;
 }
+
 
 .row ul {
     list-style: none;
@@ -94,3 +96,17 @@
     background-color: green;
 }
 
+
+
+.row input {
+    height: 2rem;
+    padding: 5px;;
+    margin: 1rem;
+    border-radius: 35px;
+    outline: none;
+    border: none;
+    width: 5rem;
+    background-color: black;
+    color: white;
+    text-align: center;
+}
