--- a/frontend-angular/src/app/(kanban)/kanban/kanban.css
+++ b/frontend-angular/src/app/(kanban)/kanban/kanban.css
@@ -1,47 +1,54 @@
 .kanban {
     height: 100vh;
-    width: 100%;
-    background-color: white;
+    width: 99%;
+    background-color: rgb(41, 41, 41);
     display: flex;
     flex-direction: column;
     margin: 10px;
 }
 
+
 .kanban  button, a {
     display: flex;
     align-items: center;
     justify-content: center;
-    width: 10rem;
+
     min-height: 40px;
-    border-radius: 8px;
-    background-color: black;
+    border-radius: 25px;
+    background-color: #1d4ea4;
     color: white;
     border: none;
     cursor: pointer;
     padding: 0 15px;
     margin-bottom: 20px;
     transition: 0.3s ease-in-out;
+    max-height: 40px;
+
     
 }
 
-.kanban > button:hover {
-    background-color: green;
+.kanban svg{
+    width: 40px;;
 }
+
+
 
 .rows {
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
     gap: 20px;
+    margin: 3rem;
 }
 
 .row {
-    background-color: #e3e3e3;
-    border-radius: 8px;
+    
+    background-color: #1d4ea4;
+    border-radius: 15px;
     padding: 20px;
     min-height: 200px;
     display: flex;
     flex-direction: column;
-    max-width: 35rem;
+    max-width: 22rem;
 }
 
 .row h3 {
@@ -50,7 +57,7 @@
 }
 
 .row button {
-    background-color: rgb(0, 0, 0);
+    background-color: rgb(52, 52, 52);
     color: white;
     border: none;
     border-radius: 5px;
@@ -58,6 +65,7 @@
     cursor: pointer;
     margin: 10px;
     border-radius: 25px;
+    max-width: 5rem;
 }
 
 .row button:hover {
@@ -65,12 +73,15 @@
 }
 
 .row textarea {
-    text-align: center;
-    width: 100%;
-    border: 1px solid gray;
-    border-radius: 5px;
-    font-size: 20px;
-    margin-bottom: 10px;
+    outline: none;
+    border: dashed 1px black;
+    font-size: 30px;
+    text-align: left;
+    color: white;
+    padding: 10px;
+    max-height: 2rem;
+    border-radius: 25px;
+    background: none;
 }
 
 
@@ -78,6 +89,7 @@
     list-style: none;
     padding: 0;
     margin: 0;
+    
 }
 
 .tasks-container {
@@ -92,21 +104,30 @@
 }
 
 
-.buttonslist :hover {
-    background-color: green;
-}
 
 
 
-.row input {
-    height: 2rem;
-    padding: 5px;;
-    margin: 1rem;
+.row #status {
+    height: 1rem;
+    padding: 5px;
+    margin-top:  1rem;
+    margin-bottom:  1rem;
     border-radius: 35px;
     outline: none;
     border: none;
     width: 5rem;
-    background-color: black;
+    background-color: rgb(105, 105, 105);
     color: white;
     text-align: center;
+}
+
+#title{
+    color: #fff;
+    outline: none;
+    max-width: 80%;
+    font-size: 30px;
+    border: none;
+    background: none;
+    
+
 }
