--- a/frontend-angular/src/app/landing/landing.css
+++ b/frontend-angular/src/app/landing/landing.css
@@ -1,3 +1,14 @@
+@keyframes slide-fade {
+  from {
+    opacity: 0;
+    transform: translateY(20px);
+  }
+  to {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
+
 .landing{
     display: flex;
     flex-direction: column;
@@ -7,6 +18,7 @@
     width: 100%;
     gap: 3rem;
     background-color: rgb(255, 255, 255);
+    animation: slide-fade 2s;
 
 
 }
