--- a/frontend-angular/src/app/landing/landing.css
+++ b/frontend-angular/src/app/landing/landing.css
@@ -17,7 +17,10 @@
     height: 100vh;
     width: 100%;
     gap: 3rem;
-    background-color: rgb(255, 255, 255);
+    color: white;
+     background: #737cfa;
+    background: linear-gradient(128deg, rgba(115, 124, 250, 1) 0%, rgb(85, 179, 247) 100%);
+
     animation: slide-fade 2s;
 
 
@@ -25,6 +28,7 @@
 
 
 .landing h1{
+    color: white;
     font-size: 70px;
 }
 
@@ -41,20 +45,21 @@
     transition: 0.7s ease-in-out;
     font-size: 30px;
     
-    background-color: rgb(0, 0, 0);
-    box-shadow: rgba(50, 50, 93, 0.25) 0px 13px 27px -5px, rgba(0, 0, 0, 0.3) 0px 8px 16px -8px;
 
+    background: linear-gradient(128deg, rgba(115, 124, 250, 1) 0%, rgb(85, 179, 247) 100%);
+box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px, rgba(0, 0, 0, 0.3) 0px 30px 60px -30px, rgba(10, 37, 64, 0.35) 0px -2px 6px 0px inset;
     color: white;
+    transition: 0.4s ease-in-out;
 
 
 }
 
 .button:hover{
-    scale: 1.05;
+    scale: 0.95;
     transform: translate(0 ,5px);
     background-color: white;
-    color: rgb(0, 0, 0);
-    box-shadow: rgba(50, 50, 93, 0.25) 0px 13px 27px -5px, rgba(0, 0, 0, 0.3) 0px 8px 16px -8px;
+
+box-shadow: rgba(50, 50, 93, 0.25) 0px 30px 60px -12px inset, rgba(0, 0, 0, 0.3) 0px 18px 36px -18px inset;
 
   
 
@@ -62,7 +67,7 @@
 }
 
 .landing p {
-    color: gray;
+    color: rgb(197, 197, 197);    
     padding-left: 1rem;
     padding-right: 1rem;
     width: fit-content;
