--- a/frontend-angular/src/app/landing/landing.html
+++ b/frontend-angular/src/app/landing/landing.html
@@ -1,7 +1,7 @@
 <section>
     <div class="landing">
         <h1>Welcome to the Kanban</h1>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua</p>
+        <p>In Japanese, kanban literally translates to "signboard." Kanban teams represent every work item as a separate card on board.</p>
        <a routerLink="/kanban" class="button">Discover</a> 
        <!-- Router Link vers la page kanban remplace le href en angular -->
 
