--- a/frontend-angular/src/app/(kanban)/kanban/kanban.html
+++ b/frontend-angular/src/app/(kanban)/kanban/kanban.html
@@ -1,3 +1,5 @@
+
+
 <div class="kanban" animate.enter="enter-animation">
   <div class="buttonslist">
        <a routerLink="/">
@@ -39,8 +41,10 @@
     <div class="row" *ngFor="let row of rows" cdkDrag> 
       <!-- Boucle for de row of le tableau rows -->
       <input id="title" [(ngModel)]="row.title" (ngModelChange)="updateRow()" rows="2" placeholder="Title..">
+
       <input id="status" [(ngModel)]="row.status" (ngModelChange)="updateRow()" rows="2" >
-      <textarea [(ngModel)]="row.taskInput" (ngModelChange)="updateRow()" rows="3" placeholder="+ Add Task"></textarea>
+
+      <textarea class="input" [(ngModel)]="row.taskInput" (ngModelChange)="updateRow()" rows="3" placeholder="+ Add Task"></textarea>
       <button (click)="addTask(row)">Add</button>
 
       <div class="tasks-container">
