--- a/frontend-angular/src/app/(kanban)/task/task.html
+++ b/frontend-angular/src/app/(kanban)/task/task.html
@@ -1,7 +1,7 @@
 
 
 
-<div class="task-item"  (click)="openMenu()">
+<div class="task-item" cdkDrag  (click)="openMenu()">
   <h4>{{ task.title }}</h4> 
   <!-- Titre -->
 </div>
